Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/DX_Product_Info__c.object-meta.xml
<CustomObject>
    <label>Dx Product Info</label>
    <nameField>
        <label>DX Product Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dx Product Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>