Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/AChE_82013_acetylcholinesterase__c.field-meta.xml
<CustomField>
    <fullName>AChE_82013_acetylcholinesterase__c</fullName>
    <label>AChE - 82013 acetylcholinesterase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>