Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/CF_81220_cystic_fibrosis__c.field-meta.xml
<CustomField>
    <fullName>CF_81220_cystic_fibrosis__c</fullName>
    <label>CF - 81220 cystic fibrosis</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>