Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Contract_exceptions_notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_exceptions_notes__c</fullName>
    <label>Contract exceptions/notes</label>
    <type>TextArea</type>
</CustomField>