Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Description_11__c.field-meta.xml
<CustomField>
    <fullName>Description_11__c</fullName>
    <label>Description 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>