Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/FISH_88230_Tissue_culture_lymphocytes__c.field-meta.xml
<CustomField>
    <fullName>FISH_88230_Tissue_culture_lymphocytes__c</fullName>
    <label>FISH - 88230 Tissue culture lymphocytes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>