Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/FISH_88233Tissue_skin_POC_establish_cult__c.field-meta.xml
<CustomField>
    <fullName>FISH_88233Tissue_skin_POC_establish_cult__c</fullName>
    <inlineHelpText>FISH - 88233 Tissue/skin/POC establish culture</inlineHelpText>
    <label>FISH-88233Tissue/skin/POC establish cult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>