Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/FISH_88283_Add_banding__c.field-meta.xml
<CustomField>
    <fullName>FISH_88283_Add_banding__c</fullName>
    <label>FISH - 88283 Add banding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>