Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/FISH_88291_Molecular_cytogenetics__c.field-meta.xml
<CustomField>
    <fullName>FISH_88291_Molecular_cytogenetics__c</fullName>
    <inlineHelpText>FISH - 88291 Molecular cytogenetics, interpretation &amp; report</inlineHelpText>
    <label>FISH - 88291 Molecular cytogenetics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>