Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/FragileX_Dx_81244_FMR1__c.field-meta.xml
<CustomField>
    <fullName>FragileX_Dx_81244_FMR1__c</fullName>
    <inlineHelpText>FragileX Dx - 81244 FMR1  fragile X gene analysis to characterize alleles</inlineHelpText>
    <label>FragileX Dx - 81244 FMR1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>