Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Karyotype_88235Tissue_culture_amniotic__c.field-meta.xml
<CustomField>
    <fullName>Karyotype_88235Tissue_culture_amniotic__c</fullName>
    <inlineHelpText>Karyotype - 88235 Tissue culture of amniotic fluid/ Establish Culture</inlineHelpText>
    <label>Karyotype-88235Tissue culture amniotic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>