Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Karyotype_88261_Five_cells_1_karyotype__c.field-meta.xml
<CustomField>
    <fullName>Karyotype_88261_Five_cells_1_karyotype__c</fullName>
    <inlineHelpText>Karyotype - 88261 Five cells 1 karyotype, with banding</inlineHelpText>
    <label>Karyotype - 88261 Five cells 1 karyotype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>