Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Karyotype_88262_Chrom_analysis__c.field-meta.xml
<CustomField>
    <fullName>Karyotype_88262_Chrom_analysis__c</fullName>
    <inlineHelpText>Karyotype - 88262 Chrom analysis (15-20 cells/2 ktype)</inlineHelpText>
    <label>Karyotype - 88262 Chrom analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>