Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Karyotype_88269_Chrom_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Karyotype_88269_Chrom_Analysis__c</fullName>
    <inlineHelpText>Karyotype - 88269 Chrom Analysis, in situ for amnio, 1 Karyotype w/banding</inlineHelpText>
    <label>Karyotype - 88269 Chrom Analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>