Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/MCC_81265patient_comparative_specimen__c.field-meta.xml
<CustomField>
    <fullName>MCC_81265patient_comparative_specimen__c</fullName>
    <inlineHelpText>MCC - 81265 patient and comparative specimen</inlineHelpText>
    <label>MCC-81265patient &amp; comparative specimen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>