Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/New_CPT_10__c.field-meta.xml
<CustomField>
    <fullName>New_CPT_10__c</fullName>
    <label>New CPT 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>