Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/New_CPT_11__c.field-meta.xml
<CustomField>
    <fullName>New_CPT_11__c</fullName>
    <label>New CPT 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>