Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/NIPT_CPT_Code_84999_81479_81599__c.field-meta.xml
<CustomField>
    <fullName>NIPT_CPT_Code_84999_81479_81599__c</fullName>
    <label>NIPT CPT Code (84999, 81479, 81599)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>