Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/NIPT_PA_Required_y_n__c.field-meta.xml
<CustomField>
    <fullName>NIPT_PA_Required_y_n__c</fullName>
    <label>NIPT PA Required? (y/n)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>