Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/PES_82105_AFP__c.field-meta.xml
<CustomField>
    <fullName>PES_82105_AFP__c</fullName>
    <label>PES - 82105 AFP</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>