Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/PPP_88291Molecular_cytogenetics__c.field-meta.xml
<CustomField>
    <fullName>PPP_88291Molecular_cytogenetics__c</fullName>
    <label>PPP-88291Molecular cytogenetics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>