Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Rate_14__c.field-meta.xml
<CustomField>
    <fullName>Rate_14__c</fullName>
    <label>Rate 14</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>