Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Select_the_Fee_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Select_the_Fee_Schedule__c</fullName>
    <label>Select the Fee Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CMS National Fee Schedule</fullName>
            </value>
            <value>
                <fullName>State Medicare Fee Schedule</fullName>
            </value>
            <value>
                <fullName>State Medicaid Fee Schedule</fullName>
            </value>
            <value>
                <fullName>Plan Specific/Proprietary Fee Schedule</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>