Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Signature_ChipOS_81228_oligo_base_arra__c.field-meta.xml
<CustomField>
    <fullName>Signature_ChipOS_81228_oligo_base_arra__c</fullName>
    <label>Signature ChipOS -81228 oligo-base array</label>
    <length>255</length>
    <type>Text</type>
</CustomField>