Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Signature_ChipOS_SNP_81229_SNP_based__c.field-meta.xml
<CustomField>
    <fullName>Signature_ChipOS_SNP_81229_SNP_based__c</fullName>
    <label>Signature ChipOS + SNP - 81229 SNP-based</label>
    <length>255</length>
    <type>Text</type>
</CustomField>