Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/STS_82105_AFP_MS_Alpha_fetoprotein__c.field-meta.xml
<CustomField>
    <fullName>STS_82105_AFP_MS_Alpha_fetoprotein__c</fullName>
    <label>STS - 82105 AFP-MS / Alpha-fetoprotein</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>