Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/STS_82677_UE3_Assay_of_estriol__c.field-meta.xml
<CustomField>
    <fullName>STS_82677_UE3_Assay_of_estriol__c</fullName>
    <label>STS - 82677 - UE3 /Assay of estriol</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>