Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/STS_84704_free_beta__c.field-meta.xml
<CustomField>
    <fullName>STS_84704_free_beta__c</fullName>
    <label>STS - 84704 free beta</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>