Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/TOTAL_NIPT__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_NIPT__c</fullName>
    <label>TOTAL NIPT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>