Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/fields/Total_STS__c.field-meta.xml
<CustomField>
    <fullName>Total_STS__c</fullName>
    <label>Total STS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>