Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/recordTypes/NTD.recordType-meta.xml
<RecordType>
    <fullName>NTD</fullName>
    <active>true</active>
    <label>NTD</label>
</RecordType>