Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/recordTypes/Others.recordType-meta.xml
<RecordType>
    <fullName>Others</fullName>
    <active>true</active>
    <label>Others</label>
</RecordType>