Perkin-UAT/force-app/main/default/objects/DX_Product_Info__c/recordTypes/SGL.recordType-meta.xml
<RecordType>
    <fullName>SGL</fullName>
    <active>true</active>
    <label>SGL</label>
</RecordType>